src/test/ui/consts/const-eval/issue-52475.stderr
error[E0744]: `while` is not allowed in a `const`
  --> $DIR/issue-52475.rs:5:9
   |
LL | /         while n < 5 {
LL | |
LL | |
LL | |             n = (n + 1) % 5;
...  |
LL | |             n += px[0];
LL | |         }
   | |_________^

warning: Constant evaluating a complex constant, this might take some time
  --> $DIR/issue-52475.rs:2:18
   |
LL |       let _ = [(); {
   |  __________________^
LL | |
LL | |         let mut n = 0;
LL | |         while n < 5 {
...  |
LL | |         0
LL | |     }];
   | |_____^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52475.rs:5:19
   |
LL |         while n < 5 {
   |                   ^ duplicate interpreter state observed here, const evaluation will never terminate

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0744.
For more information about an error, try `rustc --explain E0080`.
